Aggiunta foto nella storia

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">La nostra storia</h2>
-				<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-				<p>Il Coro Voci dell'Orobica nasce nel Novembre 2017. Il nucleo originario dei coristi è costituito da Alpini che cantarono nel coro militare a Merano (BZ). La compagine corale evocare sicuramente l'origine, ma, pur nella fedeltà dell'origine testimoniata dal cappello Alpino che alcuni indossano, si apre oggi ad accogliere tra le sue fila quanti rimangono affascinati dal canto di montagna e dall'energia che infonde nelle sue interpretazioni.</p>
+				<span class="image main"><img src="images/storia.jpg" alt="" /></span>
+				<p>Il Coro Voci dell'Orobica nasce nel Novembre 2017. Il nucleo originario dei coristi è costituito da Alpini che cantarono nel coro militare a Merano (BZ). La compagine corale vuole evocare sicuramente l'origine, ma, pur nella fedeltà dell'origine testimoniata dal cappello Alpino che alcuni indossano, si apre oggi ad accogliere tra le sue fila quanti rimangono affascinati dal canto di montagna e dall'energia che infonde nelle sue interpretazioni.</p>
 				<p>Fra le esibizioni recenti si annovera la prestigiosa animazione della liturgia del Duomo di Milano nel maggio 2019 nonché la performance artistica dell'Orobie Film Festival 2020 di Bergamo.</p>
 				<p>La formazione sistematica, fatta di molto allenamento vocale, ma anche di percorsi alla scoperta di elementi teorici che fanno la cultura del "bel canto", hanno portato dopo meno di due anni a risultati veramente apprezzabili.</p>
 			</article>
