Completamento sito web
Aggiunta locandine
Aggiunta commenti
Alcune modifiche al CSS
Logo ridimensionato

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 -->
 <html>
 
+<style>
+table img{
+	object-fit: scale-down;
+  height: 200px;
+}
+
+</style>
+
 <head>
 	<title>Coro Voci Dell'Orobica</title>
 	<meta charset="utf-8" />
@@ -35,13 +43,13 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Coro Voci dell'Orobica</h1>
-					<p>--> QUI COSA SCRIVIAMO? <--</p>
+					<!--p> Sottotitolo </p-->
 				</div>
 			</div>
 			<nav>
 				<ul>
 					<li><a href="#intro">Storia</a></li>
-					<li><a href="#work">Il nostro lavoro</a></li>
+					<li><a href="#work">I nostri concerti</a></li>
 					<li><a href="#about">Dicono di noi</a></li>
 				</ul>
 			</nav>
@@ -61,17 +69,37 @@
 
 			<!-- Work -->
 			<article id="work">
-				<h2 class="major">Il nostro lavoro</h2>
-				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-				<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-				<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+				<h2 class="major">I nostri concerti</h2>
+				<span class="image main"><table>
+					<tr>
+						<td><a href="images/locandine/090219-uggiate.jpg"><img src="images/locandine/090219-uggiate.jpg"></a></td>
+						<td><a href="images/locandine/170319-brescia.jpg"><img src="images/locandine/170319-brescia.jpg"></a></td>
+						<td><a href="images/locandine/190519-milano.jpg"><img src="images/locandine/190519-milano.jpg"></a></td>
+					</tr>
+					<tr>
+						<td><a href="images/locandine/010619-seriate.jpg"><img src="images/locandine/010619-seriate.jpg"></a></td>
+						<td><a href="images/locandine/220619-bustoarsizio.jpg"><img src="images/locandine/220619-bustoarsizio.jpg"></a></td>
+						<td><a href="images/locandine/191019-chiavenna.jpg"><img src="images/locandine/191019-chiavenna.jpg"></a></td>
+					</tr>
+					<tr>
+						<td><a href="images/locandine/271019-colverde.jpg"><img src="images/locandine/271019-colverde.jpg"></a></td>
+						<td><a href="images/locandine/151219-legnano.png"><img src="images/locandine/151219-legnano.png"></a></td>
+						<td><a href="images/locandine/211219-cene.jpg"><img src="images/locandine/211219-cene.jpg"></a></td>
+					</tr>
+					<tr>
+						<td><a href="images/locandine/210120-seriate.jpg"><img src="images/locandine/210120-seriate.jpg"></a></td>
+					</tr>
+				</table></span>
 			</article>
 
 			<!-- About -->
 			<article id="about">
 				<h2 class="major">Dicono di noi</h2>
-				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-				<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+				<span class="image main"><img src="images/about.jpg" alt="" /></span>
+				<p><b>12 febbraio 2019 - Uggiate Trevano</b><br>Da: Sig.ra Anna e Associazione Incontro tra Popoli<br><br><i>Voci leggere come fiocchi di neve. Scendono sul cuore e parlano di morte e di vita, di paure e speranza. Sono note di pace, messaggi che aprono le porte del futuro e insegnano la mitezza e la bontà. Le lacrime salgono negli occhi e attendono un altor canto, una nuova carezza per scendere pazienti e far sbocciare il fiore della meraviglia. Coro alpino. Voci di cielo. Grazie per la bella e generosa serata condivisa insieme. Grazie per la vostra bontà.</i></p>
+				<p><b>19 Maggio 2019 - Duomo di Milano</b><br>Da: Maestro Emanuele Carlo Vianelli<br><br><i>Innanzitutto non nascondo lo stupore, subito tramutatosi in compiacimento artistico nell'aver constatato la notevole qualità vocale del coro, che, pur partendo dalla tipica vocalità "alpina" (stupendi i falsetti e i profondi bassi) sfoggia delle caratteristiche di timbro e di suono degne dei migliori cori da me conosciuti. Così abbiamo potuto elevare il nostro animo nell'ascolto di pagine della tradizione religiosa popolare, ma anche - e soprattutto - nell'ascolto di pagine polifoniche sacre di notevole impegno, rese con una interpretazione assolutamente ineccepibile dal punto di vista filologico e vivificate da un suono "di sintesi" unico e, alle mie orecchie, sinora inedito, nobilitato da un'intonazione pressochè perfetta. La lezione che come musicista ho potuto trarre dall'incontro con il "Coro Voci dell'Orobica" è stata quella di poter ancora una volta constatare come, date le premesse di una forte esperienza umana, quale è quella contenuta nei valori della tradizione del Corpo degli Alpini, possano germogliare risultati artistici di notevolissimo spessore. Auguro al coro di proseguire senza indugio nel portare avanti questa non facile esperienza, frutto di tenacia, caparbietà e competenza.</i></p>
+				<p><b>27 Ottobre 2019 - Chiesa di Parè (CO)</b><br>Da: Sig.ra Pierluigia Verga<br><br><i>Cari Alpini, anche quest'anno il Vostro bel concerto (Chiesa di Pare' - 27.10.2019) è stato profondo e toccante. Ogni volta, con i Vostri canti, sapete riportarci alle cose essenziali, a quelle verità che fanno la differenza nella vita e nella morte di ogni uomo. AISLA Como e anche io naturalmente, Vi ringraziamo con stima e affetto, anche per la generosità che sempre Vi contraddistingue.</i></p>
+				<p><b>10 Novembre 2019</b><br>Da: Maestro Sig.ra Isabella Passoni<br><br><i>Brividi sulla pelle, non per il freddo. Lacrime agli occhi, non per il dolore. Emozioni forti, sono quelle che ho provato, all’ascolto dei canti interpretati da voci magistralmente dirette. Le dinamiche, quelle dei piano, dei forti, del crescendo e decrescendo sono state disegnate con cura dal direttore e altrettanto con cura sono state interpretate dai coristi. Accordi delicatissimi e ben intonati hanno sostenuto quei profondi sentimenti che potevano avere i soldati al fronte. Non solo, però, canti di soldati (di montagna). Il coro ha interpretato il celebre "O Bone Jesu" di G.Palestrina con grande delicatezza. Le accurate introduzioni hanno “aperto” lo sguardo ad una miglior conoscenza dei contenuti dei brani e del loro più preciso significato. Mi è parso ci fosse un unico intento da parte dei coristi e del loro direttore : trasmettere i ricordi e la storia attraverso la bellezza delle note. </i></p>
 			</article>
 	</div>
 
@@ -83,7 +111,7 @@
 				<li><a href="https://www.instagram.com/ilcorovocidellorobica/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="mailto:corovocidellorobica@gmail.com?subject=Contatto dal sito web" class="fas fa-envelope"></a></li>
 			</ul>
-			<p class="copyright">&copy; Coro Voci Dell'Orobica. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+			<p class="copyright">&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Coro Voci Dell'Orobica. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
 
 	</div>
