--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ table img{
 		<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<img style='height: 100%; width: 100%; object-fit: contain' src="images/logo.png"/>
+				<img style='height: 85%; width: auto; object-fit: contain; padding-top: 5px' src="images/logo.png"/>
 			</div>
 			<div class="content">
 				<div class="inner">
@@ -72,22 +72,22 @@ table img{
 				<h2 class="major">I nostri concerti</h2>
 				<span class="image main"><table>
 					<tr>
-						<td><a href="images/locandine/20190219-uggiate.jpg"><img src="images/locandine/20190219-uggiate.jpg"></a></td>
-						<td><a href="images/locandine/20190317-brescia.jpg"><img src="images/locandine/20190317-brescia.jpg"></a></td>
-						<td><a href="images/locandine/20190519-milano.jpg"><img src="images/locandine/20190519-milano.jpg"></a></td>
+						<td><a href="images/locandine/20190219-uggiate.jpg" target="_blank"><img src="images/locandine/20190219-uggiate.jpg"></a></td>
+						<td><a href="images/locandine/20190317-brescia.jpg" target="_blank"><img src="images/locandine/20190317-brescia.jpg"></a></td>
+						<td><a href="images/locandine/20190519-milano.jpg" target="_blank"><img src="images/locandine/20190519-milano.jpg"></a></td>
 					</tr>
 					<tr>
-						<td><a href="images/locandine/20190601-seriate.jpg"><img src="images/locandine/20190601-seriate.jpg"></a></td>
-						<td><a href="images/locandine/20190622-bustoarsizio.jpg"><img src="images/locandine/20190622-bustoarsizio.jpg"></a></td>
-						<td><a href="images/locandine/20191019-chiavenna.jpg"><img src="images/locandine/20191019-chiavenna.jpg"></a></td>
+						<td><a href="images/locandine/20190601-seriate.jpg" target="_blank"><img src="images/locandine/20190601-seriate.jpg"></a></td>
+						<td><a href="images/locandine/20190622-bustoarsizio.jpg" target="_blank"><img src="images/locandine/20190622-bustoarsizio.jpg"></a></td>
+						<td><a href="images/locandine/20191019-chiavenna.jpg" target="_blank"><img src="images/locandine/20191019-chiavenna.jpg"></a></td>
 					</tr>
 					<tr>
-						<td><a href="images/locandine/20191027-colverde.jpg"><img src="images/locandine/20191027-colverde.jpg"></a></td>
-						<td><a href="images/locandine/20191215-legnano.png"><img src="images/locandine/20191215-legnano.png"></a></td>
-						<td><a href="images/locandine/20191221-cene.jpg"><img src="images/locandine/20191221-cene.jpg"></a></td>
+						<td><a href="images/locandine/20191027-colverde.jpg" target="_blank"><img src="images/locandine/20191027-colverde.jpg"></a></td>
+						<td><a href="images/locandine/20191215-legnano.png" target="_blank"><img src="images/locandine/20191215-legnano.png"></a></td>
+						<td><a href="images/locandine/20191221-cene.jpg" target="_blank"><img src="images/locandine/20191221-cene.jpg"></a></td>
 					</tr>
 					<tr>
-						<td><a href="images/locandine/20200121-seriate.jpg"><img src="images/locandine/20200121-seriate.jpg"></a></td>
+						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg"></a></td>
 					</tr>
 				</table></span>
 			</article>
@@ -106,12 +106,12 @@ table img{
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="https://www.facebook.com/ilcorovocidellorobica" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.youtube.com/channel/UCo26_hf641ZQ7xIepsLgpqw/" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-				<li><a href="https://www.instagram.com/ilcorovocidellorobica/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.facebook.com/ilcorovocidellorobica" class="icon brands fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+				<li><a href="https://www.youtube.com/channel/UCo26_hf641ZQ7xIepsLgpqw/" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
+				<li><a href="https://www.instagram.com/ilcorovocidellorobica/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 				<li><a href="mailto:corovocidellorobica@gmail.com?subject=Contatto dal sito web" class="fas fa-envelope"></a></li>
 			</ul>
-			<p class="copyright">&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Coro Voci Dell'Orobica. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+			<p class="copyright">&copy; 2021 Coro Voci Dell'Orobica. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
 		</footer>
 
 	</div>
