Cambiamenti ed aggiunta di una locandina
- Nuova locandina
- Ingranditi alcuni font
- Ora il nome è in uppercase
- I nomi delle sezioni ora non sono più uppercase e sono in bold

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ table img{
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#intro">Storia</a></li>
-					<li><a href="#work">I nostri concerti</a></li>
-					<li><a href="#about">Dicono di noi</a></li>
+					<li><a href="#intro"><b>La nostra storia</b></a></li>
+					<li><a href="#work"><b>I nostri concerti</b></a></li>
+					<li><a href="#about"><b>Dicono di noi</b></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -88,6 +88,7 @@ table img{
 					</tr>
 					<tr>
 						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg"></a></td>
+						<td><a href="images/locandine/20211016-Don_Carlo.jpeg" target="_blank"><img src="images/locandine/20211016-Don_Carlo.jpeg"></a></td>
 					</tr>
 				</table></span>
 			</article>
