Aggiunta di 2 locandine
- Aggiunta locandina Biassono 11 dicembre 2021
- Aggiunta locandina Collio 19 dicembre 2021
- Piccole modifiche all'impaginazione

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@ table img{
 					<tr>
 						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg"></a></td>
 						<td><a href="images/locandine/20211016-Don_Carlo.jpeg" target="_blank"><img src="images/locandine/20211016-Don_Carlo.jpeg"></a></td>
+						<td><a href="images/locandine/20211211-biassono.jpg" target="_blank"><img src="images/locandine/20211211-biassono.jpg"></a></td>
+					</tr>
+					<tr>
+						<td><a href="images/locandine/20211219-collio.png" target="_blank"><img src="images/locandine/20211219-collio.png"></a></td>
 					</tr>
 				</table></span>
 			</article>
