--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ table img{
 					</tr>
 					<tr>
 						<td><a href="images/locandine/20211219-collio.png" target="_blank"><img src="images/locandine/20211219-collio.png"></a></td>
+						<td><a href="images/locandine/20220430-canonica-d-adda.jpg" target="_blank"><img src="images/locandine/20220430-canonica-d-adda.jpg"></a></td>
 					</tr>
 				</table></span>
 			</article>
