--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@ table img{
 			<nav>
 				<ul>
 					<li><a href="#intro"><b>La nostra storia</b></a></li>
-					<li><a href="#work"><b>I nostri concerti</b></a></li>
+					<li><a href="#concerti"><b>I nostri concerti</b></a></li>
 					<li><a href="#about"><b>Dicono di noi</b></a></li>
+					<li><a href="#foto"><b>Galleria foto</b></a></li>
+					<li><a href="#video"><b>Video</b></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -63,10 +65,11 @@ table img{
 				<h2 class="major">La nostra storia</h2>
 				<span class="image main"><img src="images/storia.jpg" alt="" /></span>
 				<p>Il Coro Voci dell'Orobica nasce nel Novembre 2017.<br>Il nucleo originario dei coristi è costituito da Alpini che hanno fatto parte del coro militare della ormai sciolta Brigata Alpina Orobica che aveva sede a Merano (BZ).<br>La compagine corale vuole evocare sicuramente l'origine, ma, pur nella fedeltà dell'origine testimoniata dal cappello Alpino che alcuni indossano, si apre oggi ad accogliere tra le sue fila quanti rimangono affascinati dal canto di montagna e, più in generale, dal canto corale nelle sue diverse sfaccettature.<br>Fra le esibizioni recenti si annovera la prestigiosa animazione della liturgia del Duomo di Milano nel maggio 2019 nonché la performance artistica dell'Orobie Film Festival 2020 di Bergamo.<br>La formazione sistematica, fatta di molto esercizio vocale, ma anche di percorsi alla scoperta degli elementi teorici che formano la cultura del "bel canto", hanno portato dopo meno di due anni a risultati veramente apprezzabili.<br>L'amore per i canti della tradizione militare e popolare, questo è il repertorio generalmente richiesto e proposto, spinge oggi il coro anche allo studio di un repertorio che va oltre a quello tradizionalmente alpino e del canto sacro; un mondo che, pur lontano dalla cultura militare, ne condivide gli orizzonti dei valori sacri all'uomo, della ricerca di ciò che ci supera e, perché no, rappresenta l'origine di qualsiasi forma di canto corale.</p>
+				<span class="image main"><img src="images/coristi/tutti.jpg" alt="" /></span>
 			</article>
 
-			<!-- Work -->
-			<article id="work">
+			<!-- I concerti -->
+			<article id="concerti">
 				<h2 class="major">I nostri concerti</h2>
 				<span class="image main"><table>
 					<tr>
@@ -108,6 +111,30 @@ table img{
 				<p><b>16 ottobre 2021 - Nova Milanese</b><br>Da: Enrico Spagnoli, direttore Coro Montecastello di Tignale<br><br><i>Ho ascoltato il concerto. Avete una ottima qualità di esecuzione. L'insieme delle voci è veramente ottimo, tutto molto ben bilanciato e con precisione ritmica in attacchi e chiusure. Avete un livello di qualità di voci alto! Molte canzoni le eseguiamo anche noi, (anche se con piccole variazioni di interpretazione) e mi sono molto piaciute. Nei piani siete proprio bravi, anche perché come dico sempre ai miei: "A cantare forte son buoni tutti!" Spero di riuscire a venire a trovarvi il 14. Vediamo.</i></p>
 				<p><b>9 aprile 2022</b><br>Da: Svitlana Stefurak - Violinista<br><br><i>Canto le lodi a tutti voi. Sia ai coristi che al direttore. Dire bravissimi è troppo poco. Il lavoro è duro ma i risultati sono eccellenti. Ho ascoltato più volte. È veramente divino. È un'interpretazione che di solito offrono i cori di professionisti da tempo ben amalgamati. Regalate davvero dei momenti magici. La grande fetta di successo appartiene al direttore che sta mettendo dentro tutte le sue capacità, anima e cuore. So per esperienza che non è facile ad ottenere i medesimi risultati. Ci vuole non solo la passione ma anche tanta pazienza. Bravissimi!</i></p>
 			</article>
+
+			<!-- Foto coro -->
+			<article id="foto">
+					<h2 class="major">Galleria foto</h2>
+					<p><span class="image main"><img src="images/coristi/direttore.jpg" alt="" /></span>
+					<b>Direttore</b>: Alfredo Magni</p>
+					<p><span class="image main"><img src="images/coristi/tenori_primi.jpg" alt="" /></span>
+					<b>Tenori primi</b>: Ivan Pace, Antonio Marzaroli, Marco Storti (Vicepresidente), Maurizio Bonin, Massimo Ricci</p>
+					<p><span class="image main"><img src="images/coristi/tenori_secondi.jpg" alt="" /></span>
+					<b>Tenori secondi</b>: Enzo Stefanini, Aurelio Rampinelli, Massimo Sala, Fabio Denti, Giacomo Tomasi (Presidente)</p>
+					<p><span class="image main"><img src="images/coristi/baritoni.jpg" alt="" /></span>
+					<b>Baritoni</b>: Corrado Mutti, Renato Gafforelli, Roberto Torresan, Giuseppe Carrara, Paolo Mongini</p>
+					<p><span class="image main"><img src="images/coristi/bassi.jpg" alt="" /></span>
+					<b>Bassi</b>: Marco Nigro, Umberto Trainini, Paolo Masneri, Lucio Frangi, Paolo Tanza, Ruggero Lecchi</p>
+			</article>
+
+			<!-- Video -->
+			<article id="video">
+					<h2 class="major">Video</h2>
+					<p><iframe width=100% height="315" src="https://www.youtube.com/embed/lnTbl77CuJM"> </iframe></p>
+					<p><iframe width=100% height="315" src="https://www.youtube.com/embed/Hg9R4qiOjEQ"> </iframe></p>
+					<p><iframe width=100% height="315" src="https://www.youtube.com/embed/V24evEP0rfI"> </iframe></p>
+			</article>
+
 	</div>
 
 		<!-- Footer -->
