Aggiunta di 2 locandine
- Aggiunta locandina concerto 01-10-2022
- Aggiunta locandina concorso 15-10-2022

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ table img{
 						<td><a href="images/locandine/20220430-canonica-d-adda.jpg" target="_blank"><img src="images/locandine/20220430-canonica-d-adda.jpg"></a></td>
 						<td><a href="images/locandine/20220716-Cane-Vione.jpeg" target="_blank"><img src="images/locandine/20220716-Cane-Vione.jpeg"></a></td>
 					</tr>
+					<tr>
+						<td><a href="images/locandine/20221001-tignale.jpg" target="_blank"><img src="images/locandine/20221001-tignale.jpg"></a></td>
+						<td><a href="images/locandine/20221015-concorso.jpg" target="_blank"><img src="images/locandine/20221015-concorso.jpg"></a></td>
+					</tr>
 				</table></span>
 			</article>
 
