--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@ table img{
 			<!-- Video -->
 			<article id="video">
 					<h2 class="major">Video</h2>
-					<p><iframe width=100% height="315" src="https://www.youtube.com/embed/lnTbl77CuJM"> </iframe></p>
-					<p><iframe width=100% height="315" src="https://www.youtube.com/embed/Hg9R4qiOjEQ"> </iframe></p>
-					<p><iframe width=100% height="315" src="https://www.youtube.com/embed/V24evEP0rfI"> </iframe></p>
+					<p><iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/lnTbl77CuJM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+					<p><iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/Hg9R4qiOjEQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+					<p><iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/V24evEP0rfI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 			</article>
 
 	</div>
