Aggiunta Partita IVA nel footer

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ table img{
 				<li><a href="https://www.instagram.com/ilcorovocidellorobica/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 				<li><a href="mailto:corovocidellorobica@gmail.com?subject=Contatto dal sito web" class="fas fa-envelope"></a></li>
 			</ul>
-			<p class="copyright">&copy; 2022 Coro Voci Dell'Orobica. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
+			<p class="copyright">&copy; 2022 Coro Voci Dell'Orobica | P. IVA: 04383040161 | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
 		</footer>
 
 	</div>
