Miglioramento impaginazione sezione concerti
- Divisione delle locandine per anno
- Ora tutte le locandine hanno la stessa larghezza

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ table img{
 			<!-- I concerti -->
 			<article id="concerti">
 				<h2 class="major">I nostri concerti</h2>
+				<h2>2019</h2>
 				<span class="image main"><table>
 					<tr>
 						<td><a href="images/locandine/20190219-uggiate.jpg" target="_blank"><img src="images/locandine/20190219-uggiate.jpg"></a></td>
@@ -84,21 +85,32 @@ table img{
 					</tr>
 					<tr>
 						<td><a href="images/locandine/20191027-colverde.jpg" target="_blank"><img src="images/locandine/20191027-colverde.jpg"></a></td>
-						<td><a href="images/locandine/20191215-legnano.png" target="_blank"><img src="images/locandine/20191215-legnano.png"></a></td>
+						<td><a href="images/locandine/20191215-legnano.jpg" target="_blank"><img src="images/locandine/20191215-legnano.jpg"></a></td>
 						<td><a href="images/locandine/20191221-cene.jpg" target="_blank"><img src="images/locandine/20191221-cene.jpg"></a></td>
 					</tr>
+				</table></span>
+				<h2>2020</h2>
+				<span class="image main"><table>
 					<tr>
 						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg"></a></td>
-						<td><a href="images/locandine/20211016-Don_Carlo.jpeg" target="_blank"><img src="images/locandine/20211016-Don_Carlo.jpeg"></a></td>
+					</tr>
+				</table></span>
+				<h2>2021</h2>
+				<span class="image main"><table>
+					<tr>
+						<td><a href="images/locandine/20211016-Don_Carlo.jpg" target="_blank"><img src="images/locandine/20211016-Don_Carlo.jpg"></a></td>
 						<td><a href="images/locandine/20211211-biassono.jpg" target="_blank"><img src="images/locandine/20211211-biassono.jpg"></a></td>
+						<td><a href="images/locandine/20211219-collio.jpg" target="_blank"><img src="images/locandine/20211219-collio.jpg"></a></td>
 					</tr>
+				</table></span>
+				<h2>2022</h2>
+				<span class="image main"><table>
 					<tr>
-						<td><a href="images/locandine/20211219-collio.png" target="_blank"><img src="images/locandine/20211219-collio.png"></a></td>
 						<td><a href="images/locandine/20220430-canonica-d-adda.jpg" target="_blank"><img src="images/locandine/20220430-canonica-d-adda.jpg"></a></td>
-						<td><a href="images/locandine/20220716-Cane-Vione.jpeg" target="_blank"><img src="images/locandine/20220716-Cane-Vione.jpeg"></a></td>
+						<td><a href="images/locandine/20220716-Cane-Vione.jpg" target="_blank"><img src="images/locandine/20220716-Cane-Vione.jpg"></a></td>
+						<td><a href="images/locandine/20221001-tignale.jpg" target="_blank"><img src="images/locandine/20221001-tignale.jpg"></a></td>
 					</tr>
 					<tr>
-						<td><a href="images/locandine/20221001-tignale.jpg" target="_blank"><img src="images/locandine/20221001-tignale.jpg"></a></td>
 						<td><a href="images/locandine/20221015-concorso.jpg" target="_blank"><img src="images/locandine/20221015-concorso.jpg"></a></td>
 					</tr>
 				</table></span>
