Aggiunta locandina 5 novembre 2022 ad Agnosine

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ table img{
 					</tr>
 					<tr>
 						<td><a href="images/locandine/20221015-concorso.jpg" target="_blank"><img src="images/locandine/20221015-concorso.jpg"></a></td>
+						<td><a href="images/locandine/20221105-agnosine.jpg" target="_blank"><img src="images/locandine/20221105-agnosine.jpg"></a></td>
 					</tr>
 				</table></span>
 			</article>
@@ -161,7 +162,7 @@ table img{
 				<li><a href="https://www.instagram.com/ilcorovocidellorobica/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 				<li><a href="mailto:corovocidellorobica@gmail.com?subject=Contatto dal sito web" class="fas fa-envelope"></a></li>
 			</ul>
-			<p class="copyright">&copy; 2022 Coro Voci Dell'Orobica | P. IVA: 04383040161 | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
+			<p class="copyright">&copy; 2022 Coro Voci Dell'Orobica | P. IVA: 04383040161 | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
 		</footer>
 
 	</div>
