--- a/index.html
+++ b/index.html
@@ -99,8 +99,13 @@ table img{
 				<span class="image main"><table>
 					<tr>
 						<td><a href="images/locandine/20211016-Don_Carlo.jpg" target="_blank"><img src="images/locandine/20211016-Don_Carlo.jpg"></a></td>
+						<td><a href="images/locandine/20211114-Albino.jpg" target="_blank"><img src="images/locandine/20211114-Albino.jpg"></a></td>
 						<td><a href="images/locandine/20211211-biassono.jpg" target="_blank"><img src="images/locandine/20211211-biassono.jpg"></a></td>
+					</tr>
+					<tr>
+						<td><img src="images/placeholder.png"></td>
 						<td><a href="images/locandine/20211219-collio.jpg" target="_blank"><img src="images/locandine/20211219-collio.jpg"></a></td>
+						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
 				<h2>2022</h2>
@@ -113,6 +118,7 @@ table img{
 					<tr>
 						<td><a href="images/locandine/20221015-concorso.jpg" target="_blank"><img src="images/locandine/20221015-concorso.jpg"></a></td>
 						<td><a href="images/locandine/20221105-agnosine.jpg" target="_blank"><img src="images/locandine/20221105-agnosine.jpg"></a></td>
+						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
 			</article>
