Aggiunta locandina concerto 17-12-2022

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ table img{
 					<tr>
 						<td><a href="images/locandine/20221015-concorso.jpg" target="_blank"><img src="images/locandine/20221015-concorso.jpg"></a></td>
 						<td><a href="images/locandine/20221105-agnosine.jpg" target="_blank"><img src="images/locandine/20221105-agnosine.jpg"></a></td>
-						<td><img src="images/placeholder.png"></td>
+						<td><a href="images/locandine/20221217-albino.jpg" target="_blank"><img src="images/locandine/20221217-albino.jpg"></a></td>
 					</tr>
 				</table></span>
 			</article>
