Aggiornamento di alcune sezioni
- I sottotitoli nelle sezioni sono ora in h3
- Modifica alla pagina video
- Aggiunti i link alle registrazioni dei concerti

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ table img{
 			<!-- I concerti -->
 			<article id="concerti">
 				<h2 class="major">I nostri concerti</h2>
-				<h2>2019</h2>
+				<h3>2019</h3>
 				<span class="image main"><table>
 					<tr>
 						<td><a href="images/locandine/20190219-uggiate.jpg" target="_blank"><img src="images/locandine/20190219-uggiate.jpg"></a></td>
@@ -89,13 +89,13 @@ table img{
 						<td><a href="images/locandine/20191221-cene.jpg" target="_blank"><img src="images/locandine/20191221-cene.jpg"></a></td>
 					</tr>
 				</table></span>
-				<h2>2020</h2>
+				<h3>2020</h3>
 				<span class="image main"><table>
 					<tr>
 						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg"></a></td>
 					</tr>
 				</table></span>
-				<h2>2021</h2>
+				<h3>2021</h3>
 				<span class="image main"><table>
 					<tr>
 						<td><a href="images/locandine/20211016-Don_Carlo.jpg" target="_blank"><img src="images/locandine/20211016-Don_Carlo.jpg"></a></td>
@@ -108,7 +108,7 @@ table img{
 						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
-				<h2>2022</h2>
+				<h3>2022</h3>
 				<span class="image main"><table>
 					<tr>
 						<td><a href="images/locandine/20220430-canonica-d-adda.jpg" target="_blank"><img src="images/locandine/20220430-canonica-d-adda.jpg"></a></td>
@@ -153,9 +153,20 @@ table img{
 			<!-- Video -->
 			<article id="video">
 					<h2 class="major">Video</h2>
-					<p><iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/lnTbl77CuJM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-					<p><iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/Hg9R4qiOjEQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-					<p><iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/V24evEP0rfI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+					<h3>I nostri video su YouTube</h3>
+					<p><ul>
+						<li><a href="https://www.youtube.com/watch?v=lnTbl77CuJM" target="_blank">Benia calastoria</a></li>
+						<li><a href="https://www.youtube.com/watch?v=Hg9R4qiOjEQ" target="_blank">Il testamento del capitano</a></li>
+						<li><a href="https://www.youtube.com/watch?v=V24evEP0rfI" target="_blank">Sui Monti Scarpazi</a></li>
+					</ul></p>
+
+					<h3>Archivio video concerti</h3>
+					<p><ul>
+						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/538069034811107" target="_blank">[05/11/2022] Concerto a ricordo dell'amico Raffaele</a></li>
+						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/505804954350935" target="_blank">[01/10/2022] Concerto al Santuario di Montecastello, Tignale (BS)</a></li>
+						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/788446852513517" target="_blank">[16/07/2022] Concerto nella Chiesa di San Gregorio Magno, Canè di Vione (BS)</a></li>
+					</ul></p>
+					<p>Altri video sul <a href="https://www.youtube.com/@corovocidellorobica/videos" target="_blank">canale YouTube</a> e la <a href="https://www.facebook.com/ilcorovocidellorobica/videos" target="_blank">pagina Facebook</a></p>
 			</article>
 
 	</div>
@@ -164,7 +175,7 @@ table img{
 		<footer id="footer">
 			<ul class="icons">
 				<li><a href="https://www.facebook.com/ilcorovocidellorobica" class="icon brands fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.youtube.com/channel/UCo26_hf641ZQ7xIepsLgpqw/" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
+				<li><a href="https://www.youtube.com/@corovocidellorobica" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
 				<li><a href="https://www.instagram.com/ilcorovocidellorobica/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 				<li><a href="mailto:corovocidellorobica@gmail.com?subject=Contatto dal sito web" class="fas fa-envelope"></a></li>
 			</ul>
