--- a/index.html
+++ b/index.html
@@ -158,10 +158,12 @@ table img{
 						<li><a href="https://www.youtube.com/watch?v=lnTbl77CuJM" target="_blank">Benia calastoria</a></li>
 						<li><a href="https://www.youtube.com/watch?v=Hg9R4qiOjEQ" target="_blank">Il testamento del capitano</a></li>
 						<li><a href="https://www.youtube.com/watch?v=V24evEP0rfI" target="_blank">Sui Monti Scarpazi</a></li>
+						<li><a href="https://www.youtube.com/watch?v=V6Za6FuRtLY" target="_blank">Auguri di buon Natale 2022</a></li>
 					</ul></p>
 
 					<h3>Archivio video concerti</h3>
 					<p><ul>
+						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/916877065941191" target="_blank">[17/12/2022] Concerto DICORANZA nell'Abbazia di San Benedetto, Albino (BG)</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/538069034811107" target="_blank">[05/11/2022] Concerto a ricordo dell'amico Raffaele</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/505804954350935" target="_blank">[01/10/2022] Concerto al Santuario di Montecastello, Tignale (BS)</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/788446852513517" target="_blank">[16/07/2022] Concerto nella Chiesa di San Gregorio Magno, Canè di Vione (BS)</a></li>
