Cambio nominativo direttore
- Cambio del direttore
- Aggiornamento anno copyright sito web

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ table img{
 					<p><span class="image main"><img src="images/coristi/tenori_primi.jpg" alt="" /></span>
 					<b>Tenori primi</b>: Ivan Pace, Antonio Marzaroli, Marco Storti (Vicepresidente), Maurizio Bonin, Massimo Ricci</p>
 					<p><span class="image main"><img src="images/coristi/tenori_secondi.jpg" alt="" /></span>
-					<b>Tenori secondi</b>: Enzo Stefanini, Aurelio Rampinelli, Massimo Sala, Fabio Denti, Giacomo Tomasi (Presidente)</p>
+					<b>Tenori secondi</b>: Enzo Stefanini, Aurelio Rampinelli, Massimo Sala, Fabio Denti (Presidente), Giacomo Tomasi</p>
 					<p><span class="image main"><img src="images/coristi/baritoni.jpg" alt="" /></span>
 					<b>Baritoni</b>: Corrado Mutti, Renato Gafforelli, Roberto Torresan, Giuseppe Carrara, Paolo Mongini</p>
 					<p><span class="image main"><img src="images/coristi/bassi.jpg" alt="" /></span>
@@ -181,7 +181,7 @@ table img{
 				<li><a href="https://www.instagram.com/ilcorovocidellorobica/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 				<li><a href="mailto:corovocidellorobica@gmail.com?subject=Contatto dal sito web" class="fas fa-envelope"></a></li>
 			</ul>
-			<p class="copyright">&copy; 2022 Coro Voci Dell'Orobica | P. IVA: 04383040161 | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
+			<p class="copyright">&copy; 2023 Coro Voci Dell'Orobica | P. IVA: 04383040161 | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
 		</footer>
 
 	</div>
