Aggiunta locandina concerto 01-04-2023

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@ table img{
 				<h3>2020</h3>
 				<span class="image main"><table>
 					<tr>
+						<td><img src="images/placeholder.png"></td>
 						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg"></a></td>
+						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
 				<h3>2021</h3>
@@ -119,6 +121,14 @@ table img{
 						<td><a href="images/locandine/20221015-concorso.jpg" target="_blank"><img src="images/locandine/20221015-concorso.jpg"></a></td>
 						<td><a href="images/locandine/20221105-agnosine.jpg" target="_blank"><img src="images/locandine/20221105-agnosine.jpg"></a></td>
 						<td><a href="images/locandine/20221217-albino.jpg" target="_blank"><img src="images/locandine/20221217-albino.jpg"></a></td>
+					</tr>
+				</table></span>
+				<h3>2023</h3>
+				<span class="image main"><table>
+					<tr>
+						<td><img src="images/placeholder.png"></td>
+						<td><a href="images/locandine/20230401-malnate.jpg" target="_blank"><img src="images/locandine/20230401-malnate.jpg"></a></td>
+						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
 			</article>
