--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ table img{
 				<h3>2023</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><img src="images/placeholder.png"></td>
 						<td><a href="images/locandine/20230401-malnate.jpg" target="_blank"><img src="images/locandine/20230401-malnate.jpg"></a></td>
+						<td><a href="images/locandine/20230506-un-tetto-per-tutti.jpg" target="_blank"><img src="images/locandine/20230506-un-tetto-per-tutti.jpg"></a></td>
 						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
