Aggiunta di 2 locandine
- Aggiunta locandina concerto 27-09-2020
- Aggiunta locandina concerto 13-05-2023

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ table img{
 				<h3>2020</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><img src="images/placeholder.png"></td>
 						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg"></a></td>
+						<td><a href="images/locandine/20200927-seriate.jpg" target="_blank"><img src="images/locandine/20200927-seriate.jpg"></a></td>
 						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
@@ -133,7 +133,7 @@ table img{
 					<tr>
 						<td><a href="images/locandine/20230401-malnate.jpg" target="_blank"><img src="images/locandine/20230401-malnate.jpg"></a></td>
 						<td><a href="images/locandine/20230506-un-tetto-per-tutti.jpg" target="_blank"><img src="images/locandine/20230506-un-tetto-per-tutti.jpg"></a></td>
-						<td><img src="images/placeholder.png"></td>
+						<td><a href="images/locandine/20230513-burago.jpg" target="_blank"><img src="images/locandine/20230513-burago.jpg"></a></td>
 					</tr>
 				</table></span>
 			</article>
